# paper2repo

./: .env.template  .gitignore  CHANGELOG.md  README.md  STREAMLIT_DEPLOYMENT.md  app.py  main.py  pyproject.toml  reproduce.sh  requirements-streamlit.txt  requirements.txt  run_e2e_test.py  setup.py
.github/workflows/: sync-to-huggingface.yml
.huggingface/: README.md
.streamlit/: config.toml
docs/: ARCHITECTURE.md  LLM_PROVIDER_GUIDE.md
paper2repo/: __init__.py
paper2repo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paper2repo/agents/: __init__.py  algorithm_analysis.py  code_generator.py  code_planning.py  concept_analysis.py  document_parsing.py  intent_understanding.py  memory_manager.py  orchestrator.py  reference_mining.py  validator.py
paper2repo/cli/: __init__.py  main.py
paper2repo/config/: __init__.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.template
paper2repo/memory/: __init__.py  codemem.py  coderag.py  skill_memory.py
paper2repo/prompts/: __init__.py  algorithm_prompts.py  codegen_prompts.py  concept_prompts.py  intent_prompts.py  planning_prompts.py  validation_prompts.py
paper2repo/schemas/: __init__.py  algorithm_schema.json  blueprint_schema.json  codemem_entry.json  concept_schema.json  document_index.json
paper2repo/tools/: __init__.py
paper2repo/tools/action/: __init__.py  command_exec.py  filesystem.py  git_patch.py  sandbox.py
paper2repo/tools/cognitive/: __init__.py  retrieval.py  segmentation.py  semantic_index.py
paper2repo/tools/perception/: __init__.py  github_search.py  pdf_ingest.py  web_fetch.py
paper2repo/ui/: __init__.py  streamlit_app.py
paper2repo/utils/: __init__.py  config_loader.py  file_utils.py  llm_utils.py
paper2repo/utils/llm_providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
paper2repo/workflows/: __init__.py  p1_blueprint_workflow.py  p2_codegen_workflow.py  p3_verify_workflow.py  pipeline_orchestrator.py
tests/: __init__.py  conftest.py  test_cli_help.py  test_imports.py  test_llm_providers.py  test_pipeline_components.py
