[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper2repo"
version = "1.0.0"
description = "AI-powered multi-agent platform that transforms research papers into production-ready code repositories"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Paper2Repo Team", email = "team@paper2repo.dev"}
]
keywords = ["ai", "code-generation", "research", "papers", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
]
ui = [
    "streamlit>=1.28.0",
]
pdf = [
    "pymupdf>=1.23.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "paper2repo[cli,ui,pdf,dev]",
]

[project.urls]
Homepage = "https://github.com/hehamalainen/paper2repo"
Documentation = "https://github.com/hehamalainen/paper2repo#readme"
Repository = "https://github.com/hehamalainen/paper2repo"
Issues = "https://github.com/hehamalainen/paper2repo/issues"

[project.scripts]
paper2repo = "paper2repo.cli.main:cli"

[tool.setuptools]
packages = ["paper2repo"]

[tool.setuptools.package-data]
paper2repo = ["VERSION", "schemas/*.json", "config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
